2005-04-06 Ritvik Mayank <mritvik@novell.com>
  	   by Sudharsan V <vsudharsan@novell.com>
	* class.cs: correction for reflecting the correct Line No. in the Error message	
2005-04-05 Ritvik Mayank <mritvik@novell.com>
  	   Patch Submitted by Sudharsan V <vsudharsan@novell.com>
	* mb-parser.jay : correction for reflecting the correct Line No. in the Error message	

2005-03-31 Manjula GHM <mmanjula@novell.com>
	*mb-tokenizer.cs:To fix make test failure
2005-03-31 Manjula GHM <mmanjula@novell.com>
	*mb-tokenizer.cs: Support declaration of decimal numbers with no digits before point like '.52' instead of '0.52'

2005-03-29 Manjula GHM <mmanjula@novell.com>
	*assign.cs: Disallow New Date assignment with types other than date and object type

2005-03-25:3 Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* AssemblyInfo.cs: Small increment in the version number to publicize --codepage support

2005-03-25:2 Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* genericparser.cs: another static Parse overload to support specifying encoding when parsing from a file.
	* driver.cs: obsoletes --tokenize, record currentEncoding for each source-file to be processed, call the new Parse overload
		Implement support for a --codepage option similar to mcs. Example: 
			mono mbas.exe --codepage:1252 WindowsANSI.vb --codepage:utf8 UTF8.vb --codepage:reset currentcharset.vb

2005-03-25:1 Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* genericparser.cs: another Parse overload to support specifying encoding when parsing from a file.
	Preparing to implement support for a /codepage option similar to mcs

2005-03-24 Manjula GHM <mmanjula@novell.com>
	* mb-tokenizer.cs: To fix parser error for ExternalSource Directives

2005-03-24 Satya Sudha K <ksathyasudha@novell.com>
	* mb-parser.jay : 
			- Support for Dictionary Member Access Expressions
			- Exponentiation operator in compound assignments
	* expression.cs : Merged 'Exponentiation' class with 'Binary' class